@@ -2,9 +2,33 @@ package com.lms.service.impl;
 
 import com.lms.dto.request.BorrowRequest;
 import com.lms.dto.response.MemberBorrowDTO;
-import com.lms.entity.*;
+import com.lms.dto.response.ReservationRequestDTO;
+import com.lms.dto.response.ReturnRequestDTO;
+import com.lms.entity.Author;
+import com.lms.entity.Book;
+import com.lms.entity.BookItem;
+import com.lms.entity.Borrow;
+import com.lms.entity.BorrowDetail;
+import com.lms.entity.Member;
+import com.lms.entity.MemberAccount;
+import com.lms.entity.MemberNotification;
+import com.lms.entity.MemberNotificationId;
+import com.lms.entity.Notification;
+import com.lms.entity.Reservation;
+import com.lms.entity.SystemSetting;
+import com.lms.enums.ActionType;
 import com.lms.enums.UserStatus;
-import com.lms.repository.*;
+import com.lms.repository.BookItemRepository;
+import com.lms.repository.BookRepository;
+import com.lms.repository.BorrowDetailRepository;
+import com.lms.repository.BorrowRepository;
+import com.lms.repository.MemberAccountRepository;
+import com.lms.repository.MemberNotificationRepository;
+import com.lms.repository.MemberRepository;
+import com.lms.repository.NotificationRepository;
+import com.lms.repository.ReservationRepository;
+import com.lms.repository.SystemSettingRepository;
+import com.lms.service.AuditLogService;
 import com.lms.service.BorrowService;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -24,7 +48,11 @@ public class BorrowServiceImpl implements BorrowService {
     private final BorrowDetailRepository borrowDetailRepository;
     private final BookRepository bookRepository;
     private final MemberAccountRepository memberAccountRepository;
+    private final SystemSettingRepository systemSettingRepository;
     private final ReservationRepository reservationRepository;
+    private final AuditLogService auditLogService;
+    private final NotificationRepository notificationRepository;
+    private final MemberNotificationRepository memberNotificationRepository;
 
     public BorrowServiceImpl(MemberRepository memberRepository,
                              BookItemRepository bookItemRepository,
@@ -32,45 +60,55 @@ public class BorrowServiceImpl implements BorrowService {
                              BorrowDetailRepository borrowDetailRepository,
                              BookRepository bookRepository,
                              MemberAccountRepository memberAccountRepository,
-                             ReservationRepository reservationRepository) {
+                             SystemSettingRepository systemSettingRepository,
+                             ReservationRepository reservationRepository,
+                             AuditLogService auditLogService,
+                             NotificationRepository notificationRepository,
+                             MemberNotificationRepository memberNotificationRepository) {
         this.memberRepository = memberRepository;
         this.bookItemRepository = bookItemRepository;
         this.borrowRepository = borrowRepository;
         this.borrowDetailRepository = borrowDetailRepository;
         this.bookRepository = bookRepository;
         this.memberAccountRepository = memberAccountRepository;
+        this.systemSettingRepository = systemSettingRepository;
         this.reservationRepository = reservationRepository;
+        this.auditLogService = auditLogService;
+        this.notificationRepository = notificationRepository;
+        this.memberNotificationRepository = memberNotificationRepository;
     }
 
     @Override
     @Transactional(rollbackFor = Exception.class)
-    public Borrow processBorrowing(BorrowRequest request, String librarianUsername) throws Exception {
-        Member member = memberRepository.findByUserEmail(request.getMemberEmail())
-                .orElseThrow(() -> new Exception("Không tìm thấy độc giả với email này!"));
+    public Borrow processBorrowing(BorrowRequest request, String librarianUsername) {
+        String identifier = request.getMemberIdentifier() != null && !request.getMemberIdentifier().isBlank()
+                ? request.getMemberIdentifier().trim()
+                : request.getMemberEmail();
+        Member member = memberRepository.findByUserEmail(identifier)
+                .or(() -> memberRepository.findByUserPhone(identifier))
+                .orElseThrow(() -> new IllegalArgumentException("Khong tim thay doc gia voi email hoac so dien thoai nay!"));
 
         if (member.getUser() != null && member.getUser().getStatus() != UserStatus.Active) {
-            throw new Exception("Tài khoản thành viên này đang bị khóa hoặc chưa kích hoạt!");
+            throw new IllegalArgumentException("Tai khoan thanh vien nay dang bi khoa hoac chua kich hoat!");
         }
 
         List<BookItem> bookItemsToBorrow = new ArrayList<>();
         for (String barcode : request.getBarcodes()) {
             BookItem item = bookItemRepository.findByBarcode(barcode)
-                    .orElseThrow(() -> new Exception("Mã vạch " + barcode + " không tồn tại!"));
-
+                    .orElseThrow(() -> new IllegalArgumentException("Ma vach " + barcode + " khong ton tai!"));
             if (!"Available".equalsIgnoreCase(item.getStatus())) {
-                throw new Exception("Sách có mã vạch " + barcode + " hiện tại không sẵn sàng!");
+                throw new IllegalArgumentException("Sach co ma vach " + barcode + " hien tai khong san sang!");
             }
             bookItemsToBorrow.add(item);
         }
 
         long currentBorrowCount = borrowDetailRepository.countActiveBorrowedBooks(member.getMemberId());
-        int maxLimit = member.getTier() != null ? member.getTier().getBorrowLimit() : 3;
-        int totalRequestedBooks = (int) currentBorrowCount + bookItemsToBorrow.size();
-
-        if (totalRequestedBooks > maxLimit) {
-            throw new Exception("Số lượng sách vượt quá giới hạn mượn của hạng thành viên!");
+        int maxLimit = getEffectiveBorrowLimit(member);
+        if (currentBorrowCount + bookItemsToBorrow.size() > maxLimit) {
+            throw new IllegalArgumentException("So luong sach vuot qua gioi han muon cua hang thanh vien!");
         }
 
+        int borrowDays = normalizeBorrowDays(request.getNumberOfDays());
         Borrow borrow = new Borrow();
         borrow.setMember(member);
         borrow.setBorrowDate(LocalDateTime.now());
@@ -82,7 +120,7 @@ public class BorrowServiceImpl implements BorrowService {
             detail.setBorrow(borrow);
             detail.setBook(item.getBook());
             detail.setBookItem(item);
-            detail.setDueDate(LocalDateTime.now().plusDays(14));
+            detail.setDueDate(LocalDateTime.now().plusDays(borrowDays));
             detail.setStatus("Borrowed");
             detail.setRenewCount(0);
             borrowDetailRepository.save(detail);
@@ -90,25 +128,24 @@ public class BorrowServiceImpl implements BorrowService {
             item.setStatus("Borrowed");
             bookItemRepository.save(item);
         }
-
         return borrow;
     }
 
     @Override
     @Transactional(rollbackFor = Exception.class)
-    public Borrow memberSubmitBorrowRequest(String username, Integer bookId, Integer numberOfDays) throws Exception {
+    public Borrow memberSubmitBorrowRequest(String username, Integer bookId, Integer numberOfDays) {
         Member member = memberRepository.findByAccountUsername(username)
-                .orElseThrow(() -> new Exception("Không tìm thấy thông tin độc giả!"));
-
+                .orElseThrow(() -> new IllegalArgumentException("Khong tim thay thong tin doc gia!"));
         Book book = bookRepository.findById(bookId)
-                .orElseThrow(() -> new Exception("Sách yêu cầu mượn không tồn tại!"));
+                .orElseThrow(() -> new IllegalArgumentException("Sach yeu cau muon khong ton tai!"));
 
         long currentBorrowed = borrowDetailRepository.countActiveBorrowedBooks(member.getMemberId());
-        int maxLimit = member.getTier() != null ? member.getTier().getBorrowLimit() : 3;
+        int maxLimit = getEffectiveBorrowLimit(member);
         if (currentBorrowed >= maxLimit) {
-            throw new Exception("Yêu cầu bị từ chối! Bạn đã mượn chạm giới hạn tối đa cho phép (" + maxLimit + " cuốn).");
+            throw new IllegalArgumentException("Yeu cau bi tu choi! Ban da muon cham gioi han toi da cho phep (" + maxLimit + " cuon).");
         }
 
+        int borrowDays = normalizeBorrowDays(numberOfDays);
         Borrow borrow = new Borrow();
         borrow.setMember(member);
         borrow.setBorrowDate(LocalDateTime.now());
@@ -119,108 +156,30 @@ public class BorrowServiceImpl implements BorrowService {
         detail.setBorrow(borrow);
         detail.setBook(book);
         detail.setBookItem(null);
-        detail.setDueDate(LocalDateTime.now().plusDays(numberOfDays != null ? numberOfDays : 14));
+        detail.setDueDate(LocalDateTime.now().plusDays(borrowDays));
         detail.setStatus("Pending");
         detail.setRenewCount(0);
         borrowDetailRepository.save(detail);
 
+        auditLogService.log(
+                ActionType.REQUEST_BORROW,
+                "Member " + username + " gui yeu cau muon sach #" + book.getBookId()
+                        + " - " + book.getTitle() + " trong " + borrowDays + " ngay.");
         return borrow;
     }
 
     @Override
     @Transactional(rollbackFor = Exception.class)
-    public void processReturnBook(String barcode) throws Exception {
-        BookItem item = bookItemRepository.findByBarcode(barcode)
-                .orElseThrow(() -> new Exception("Mã vạch sách vật lý không tồn tại!"));
-
-        if (!"Borrowed".equalsIgnoreCase(item.getStatus())) {
-            throw new Exception("Sách này hiện tại đang nằm ở trong kho, không có lịch sử cho mượn!");
-        }
-
-        BorrowDetail activeDetail = borrowDetailRepository.findAll().stream()
-                .filter(d -> d.getBookItem() != null && d.getBookItem().getBookItemId().equals(item.getBookItemId())
-                        && ("Borrowed".equalsIgnoreCase(d.getStatus()) || "Overdue".equalsIgnoreCase(d.getStatus())))
-                .findFirst()
-                .orElseThrow(() -> new Exception("Không tìm thấy lịch sử mượn hợp lệ ứng với mã vạch sách này!"));
-
-        item.setStatus("Available");
-        bookItemRepository.save(item);
-
-        activeDetail.setReturnDate(LocalDateTime.now());
-        activeDetail.setStatus("Returned");
-        borrowDetailRepository.save(activeDetail);
-
-        List<BorrowDetail> sideDetails = borrowDetailRepository.findAll().stream()
-                .filter(d -> d.getBorrow() != null && d.getBorrow().getBorrowId().equals(activeDetail.getBorrow().getBorrowId()))
-                .collect(Collectors.toList());
-
-        boolean allReturned = sideDetails.stream().allMatch(d -> "Returned".equalsIgnoreCase(d.getStatus()));
-        if (allReturned) {
-            Borrow parent = activeDetail.getBorrow();
-            parent.setStatus("Returned");
-            borrowRepository.save(parent);
-        }
-    }
-
-    @Override
-    @Transactional(readOnly = true)
-    public List<Borrow> getBorrowsByMemberAndStatus(String username, String status) {
-        // 🛠️ FIX: Gọi chuẩn thông qua getMember().getMemberId()
-        Integer targetMemberId = memberAccountRepository.findByUsername(username)
-                .map(MemberAccount::getMember)
-                .map(Member::getMemberId)
-                .orElse(null);
-
-        if (targetMemberId == null) return new ArrayList<>();
-
-        return borrowRepository.findAll().stream()
-                .filter(b -> b.getMember() != null
-                        && targetMemberId.equals(b.getMember().getMemberId())
-                        && status.equalsIgnoreCase(b.getStatus()))
-                .collect(Collectors.toList());
-    }
-
-    @Override
-    @Transactional(readOnly = true)
-    public List<Borrow> getAllPendingRequests() {
-        return borrowRepository.findAll().stream()
-                .filter(b -> "Pending".equalsIgnoreCase(b.getStatus()))
-                .collect(Collectors.toList());
-    }
-
-    @Override
-    @Transactional(readOnly = true)
-    public List<Borrow> getAllReturnRequests() {
-        return borrowRepository.findAll().stream()
-                .filter(b -> "Return_Pending".equalsIgnoreCase(b.getStatus()))
-                .collect(Collectors.toList());
-    }
-
-    @Override
-    @Transactional(readOnly = true)
-    public List<Borrow> getAllActiveLoans() {
-        return borrowRepository.findAll().stream()
-                .filter(b -> "Active".equalsIgnoreCase(b.getStatus()) || "Borrowing".equalsIgnoreCase(b.getStatus()))
-                .collect(Collectors.toList());
-    }
-
-    @Override
-    @Transactional(rollbackFor = Exception.class)
-    public void approvePendingRequest(Integer borrowId, String staffUsername) throws Exception {
+    public void approvePendingRequest(Integer borrowId, String staffUsername) {
         Borrow borrow = borrowRepository.findById(borrowId)
-                .orElseThrow(() -> new Exception("Không tìm thấy đơn yêu cầu!"));
-
+                .orElseThrow(() -> new IllegalArgumentException("Khong tim thay don yeu cau muon!"));
         borrow.setStatus("Active");
         borrowRepository.save(borrow);
 
-        List<BorrowDetail> details = borrowDetailRepository.findAll().stream()
-                .filter(d -> d.getBorrow() != null && d.getBorrow().getBorrowId().equals(borrowId))
-                .collect(Collectors.toList());
-
+        List<BorrowDetail> details = getBorrowDetailsByBorrowId(borrowId);
         for (BorrowDetail detail : details) {
             detail.setStatus("Borrowed");
             borrowDetailRepository.save(detail);
-
             if (detail.getBookItem() != null) {
                 BookItem item = detail.getBookItem();
                 item.setStatus("Borrowed");
@@ -231,35 +190,244 @@ public class BorrowServiceImpl implements BorrowService {
 
     @Override
     @Transactional(rollbackFor = Exception.class)
-    public void approveReturnRequest(Integer borrowId) throws Exception {
+    public void memberSubmitReturnRequest(String username, Integer borrowDetailId) {
+        Integer memberId = getMemberIdByUsername(username);
+        BorrowDetail detail = borrowDetailRepository.findById(borrowDetailId)
+                .orElseThrow(() -> new IllegalArgumentException("Khong tim thay chi tiet phieu muon tuong ung!"));
+        if (memberId == null || detail.getBorrow() == null || detail.getBorrow().getMember() == null
+                || !memberId.equals(detail.getBorrow().getMember().getMemberId())) {
+            throw new IllegalArgumentException("Ban khong co quyen gui yeu cau tra sach nay!");
+        }
+        if (!"Borrowed".equalsIgnoreCase(detail.getStatus()) && !"Overdue".equalsIgnoreCase(detail.getStatus())) {
+            throw new IllegalArgumentException("Trang thai sach hien tai khong hop le de gui yeu cau tra!");
+        }
+
+        detail.setStatus("Return_Pending");
+        borrowDetailRepository.save(detail);
+
+        Borrow parent = detail.getBorrow();
+        parent.setStatus("Return_Pending");
+        borrowRepository.save(parent);
+
+        auditLogService.log(
+                ActionType.REQUEST_RETURN,
+                "Member " + username + " gui yeu cau tra sach #" + parent.getBorrowId() + ".");
+    }
+
+    @Override
+    @Transactional(rollbackFor = Exception.class)
+    public void memberSubmitRenewRequest(Integer borrowDetailId) {
+        BorrowDetail detail = borrowDetailRepository.findById(borrowDetailId)
+                .orElseThrow(() -> new IllegalArgumentException("Khong tim thay chi tiet phieu muon!"));
+
+        if (!"Borrowed".equalsIgnoreCase(detail.getStatus())) {
+            throw new IllegalArgumentException("Chi sach dang o trang thai 'Dang muon' moi duoc phep yeu cau gia han!");
+        }
+
+        int maxRenewals = getPositiveIntSetting("MAX_RENEWALS", 2);
+        if (detail.getRenewCount() != null && detail.getRenewCount() >= maxRenewals) {
+            throw new IllegalArgumentException("Sach nay da duoc gia han toi da " + maxRenewals + " lan!");
+        }
+
+        detail.setStatus("Renew_Pending");
+        borrowDetailRepository.save(detail);
+    }
+
+    @Override
+    @Transactional(rollbackFor = Exception.class)
+    public void approveReturnRequest(Integer borrowId) {
         Borrow borrow = borrowRepository.findById(borrowId)
-                .orElseThrow(() -> new Exception("Không tìm thấy đơn yêu cầu trả!"));
+                .orElseThrow(() -> new IllegalArgumentException("Khong tim thay don yeu cau tra!"));
         borrow.setStatus("Returned");
         borrowRepository.save(borrow);
 
-        List<BorrowDetail> details = borrowDetailRepository.findAll().stream()
-                .filter(d -> d.getBorrow() != null && d.getBorrow().getBorrowId().equals(borrowId))
-                .collect(Collectors.toList());
-        for (BorrowDetail detail : details) {
+        for (BorrowDetail detail : getBorrowDetailsByBorrowId(borrowId)) {
             detail.setStatus("Returned");
+            detail.setReturnDate(LocalDateTime.now());
             borrowDetailRepository.save(detail);
+            if (detail.getBookItem() != null) {
+                BookItem item = detail.getBookItem();
+                item.setStatus("Available");
+                bookItemRepository.save(item);
+            }
+        }
+
+        sendInternalNotification(borrow.getMember(), "Xac nhan tra sach thanh cong",
+                "Yeu cau tra sach cua phieu muon #" + borrowId + " da duoc thu thu phe duyet.");
+    }
+
+    @Override
+    @Transactional(rollbackFor = Exception.class)
+    public void processReturnBook(String barcode) {
+        BookItem item = bookItemRepository.findByBarcode(barcode)
+                .orElseThrow(() -> new IllegalArgumentException("Ma vach sach vat ly khong ton tai!"));
+        BorrowDetail activeDetail = borrowDetailRepository.findAll().stream()
+                .filter(d -> d.getBookItem() != null && d.getBookItem().getBookItemId().equals(item.getBookItemId())
+                        && ("Borrowed".equalsIgnoreCase(d.getStatus())
+                        || "Overdue".equalsIgnoreCase(d.getStatus())
+                        || "Return_Pending".equalsIgnoreCase(d.getStatus())))
+                .findFirst()
+                .orElseThrow(() -> new IllegalArgumentException("Khong tim thay lich su muon hop le ung voi ma vach sach nay!"));
+
+        item.setStatus("Available");
+        bookItemRepository.save(item);
+        activeDetail.setReturnDate(LocalDateTime.now());
+        activeDetail.setStatus("Returned");
+        borrowDetailRepository.save(activeDetail);
+
+        Borrow parent = activeDetail.getBorrow();
+        List<BorrowDetail> sideDetails = getBorrowDetailsByBorrowId(parent.getBorrowId());
+        if (sideDetails.stream().allMatch(d -> "Returned".equalsIgnoreCase(d.getStatus()))) {
+            parent.setStatus("Returned");
+            borrowRepository.save(parent);
         }
     }
 
     @Override
     @Transactional(rollbackFor = Exception.class)
-    public void updateStatus(Integer loanId, String status) throws Exception {
+    public Reservation memberSubmitReservationRequest(String username, Integer bookId) {
+        Member member = memberRepository.findByAccountUsername(username)
+                .orElseThrow(() -> new IllegalArgumentException("Tai khoan doc gia khong ton tai!"));
+        Book book = bookRepository.findById(bookId)
+                .orElseThrow(() -> new IllegalArgumentException("Sach yeu cau dat truoc khong ton tai!"));
+
+        boolean alreadyReserved = reservationRepository.findByMember_MemberIdOrderByReservationDateDesc(member.getMemberId())
+                .stream()
+                .anyMatch(r -> r.getBook() != null
+                        && r.getBook().getBookId().equals(bookId)
+                        && ("Pending".equalsIgnoreCase(r.getStatus()) || "Active".equalsIgnoreCase(r.getStatus())));
+        if (alreadyReserved) {
+            throw new IllegalArgumentException("Ban da co mot yeu cau dat truoc cuon sach nay va dang cho xu ly!");
+        }
+
+        Reservation reservation = new Reservation();
+        reservation.setMember(member);
+        reservation.setBook(book);
+        reservation.setReservationDate(LocalDateTime.now());
+        reservation.setStatus("Pending");
+        Reservation savedReservation = reservationRepository.save(reservation);
+        auditLogService.log(
+                ActionType.RESERVE_BOOK,
+                "Member " + username + " gui yeu cau dat truoc sach #" + book.getBookId()
+                        + " - " + book.getTitle() + ".");
+        return savedReservation;
+    }
+
+    @Override
+    @Transactional(rollbackFor = Exception.class)
+    public void approveReservationRequest(Integer reservationId, String staffUsername) {
+        Reservation reservation = reservationRepository.findById(reservationId)
+                .orElseThrow(() -> new IllegalArgumentException("Khong tim thay don yeu cau dat truoc!"));
+        if (!"Pending".equalsIgnoreCase(reservation.getStatus())) {
+            throw new IllegalArgumentException("Don dat truoc nay da duoc xu ly tu truoc!");
+        }
+
+        reservation.setStatus("Active");
+        reservationRepository.save(reservation);
+        sendInternalNotification(reservation.getMember(), "Yeu cau dat truoc duoc phe duyet",
+                "Cuon sach '" + reservation.getBook().getTitle() + "' da duoc dat giu thanh cong.");
+    }
+
+    @Override
+    @Transactional(rollbackFor = Exception.class)
+    public void memberCancelReservation(String username, Integer reservationId) {
+        Reservation reservation = reservationRepository.findById(reservationId)
+                .orElseThrow(() -> new IllegalArgumentException("Don dat truoc khong ton tai!"));
+        Integer currentMemberId = getMemberIdByUsername(username);
+        if (currentMemberId == null || !reservation.getMember().getMemberId().equals(currentMemberId)) {
+            throw new IllegalArgumentException("Ban khong co quyen huy don dat truoc cua nguoi khac!");
+        }
+        reservation.setStatus("Canceled");
+        reservationRepository.save(reservation);
+    }
+
+    @Override
+    @Transactional(readOnly = true)
+    public List<ReturnRequestDTO> getPendingReturnRequestDTOs() {
+        return borrowDetailRepository.findByStatus("Return_Pending").stream()
+                .map(bd -> {
+                    Member member = bd.getBorrow().getMember();
+                    String name = member != null && member.getUser() != null ? member.getUser().getFullName() : "N/A";
+                    String email = member != null && member.getUser() != null ? member.getUser().getEmail() : "N/A";
+                    return new ReturnRequestDTO(
+                            bd.getBorrowDetailId(),
+                            name,
+                            email,
+                            bd.getBook().getTitle(),
+                            bd.getBookItem() != null ? bd.getBookItem().getBarcode() : "N/A",
+                            bd.getBorrow().getBorrowDate());
+                })
+                .toList();
+    }
+
+    @Override
+    @Transactional(readOnly = true)
+    public List<Reservation> getAllPendingReservations() {
+        return reservationRepository.findAll().stream()
+                .filter(r -> "Pending".equalsIgnoreCase(r.getStatus()))
+                .toList();
+    }
+
+    @Override
+    @Transactional(readOnly = true)
+    public List<ReservationRequestDTO> getPendingReservationDTOs() {
+        return getAllPendingReservations().stream()
+                .map(r -> new ReservationRequestDTO(
+                        r.getReservationId(),
+                        r.getMember() != null && r.getMember().getUser() != null ? r.getMember().getUser().getFullName() : "N/A",
+                        r.getBook().getTitle(),
+                        r.getReservationDate(),
+                        1))
+                .toList();
+    }
+
+    @Override
+    @Transactional(readOnly = true)
+    public List<Borrow> getBorrowsByMemberAndStatus(String username, String status) {
+        Integer id = getMemberIdByUsername(username);
+        return id == null ? new ArrayList<>() : borrowRepository.findAll().stream()
+                .filter(b -> b.getMember() != null && id.equals(b.getMember().getMemberId()) && status.equalsIgnoreCase(b.getStatus()))
+                .toList();
+    }
+
+    @Override
+    @Transactional(readOnly = true)
+    public List<Borrow> getAllPendingRequests() {
+        return borrowRepository.findAll().stream()
+                .filter(b -> "Pending".equalsIgnoreCase(b.getStatus()))
+                .toList();
+    }
+
+    @Override
+    @Transactional(readOnly = true)
+    public List<Borrow> getAllReturnRequests() {
+        return borrowRepository.findAll().stream()
+                .filter(b -> "Return_Pending".equalsIgnoreCase(b.getStatus()))
+                .toList();
+    }
+
+    @Override
+    @Transactional(readOnly = true)
+    public List<Borrow> getAllActiveLoans() {
+        return borrowRepository.findAll().stream()
+                .filter(b -> "Active".equalsIgnoreCase(b.getStatus()) || "Borrowing".equalsIgnoreCase(b.getStatus()))
+                .toList();
+    }
+
+    @Override
+    @Transactional(rollbackFor = Exception.class)
+    public void updateStatus(Integer loanId, String status) {
         Borrow borrow = borrowRepository.findById(loanId)
-                .orElseThrow(() -> new Exception("Không tìm thấy đơn mượn/trả tương ứng!"));
+                .orElseThrow(() -> new IllegalArgumentException("Khong tim thay don muon/tra tuong ung!"));
         borrow.setStatus(status);
         borrowRepository.save(borrow);
     }
 
     @Override
     @Transactional(readOnly = true)
-    public Borrow getBorrowById(Integer borrowId) throws Exception {
+    public Borrow getBorrowById(Integer borrowId) {
         return borrowRepository.findById(borrowId)
-                .orElseThrow(() -> new Exception("Không tìm thấy đơn mượn!"));
+                .orElseThrow(() -> new IllegalArgumentException("Khong tim thay don muon!"));
     }
 
     @Override
@@ -267,69 +435,31 @@ public class BorrowServiceImpl implements BorrowService {
     public List<BorrowDetail> getBorrowDetailsByBorrowId(Integer borrowId) {
         return borrowDetailRepository.findAll().stream()
                 .filter(d -> d.getBorrow() != null && d.getBorrow().getBorrowId().equals(borrowId))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     @Transactional(readOnly = true)
     public List<Borrow> getAllBorrowHistoryByMember(String username) {
-        // 🛠️ FIX: Gọi chuẩn thông qua getMember().getMemberId()
-        Integer targetMemberId = memberAccountRepository.findByUsername(username)
-                .map(MemberAccount::getMember)
-                .map(Member::getMemberId)
-                .orElse(null);
-
-        if (targetMemberId == null) return new ArrayList<>();
-
-        return borrowRepository.findAll().stream()
-                .filter(b -> b.getMember() != null && targetMemberId.equals(b.getMember().getMemberId()))
-                .collect(Collectors.toList());
+        Integer id = getMemberIdByUsername(username);
+        return id == null ? new ArrayList<>() : borrowRepository.findAll().stream()
+                .filter(b -> b.getMember() != null && id.equals(b.getMember().getMemberId()))
+                .toList();
     }
-
-    // ==========================================
-    // LOGIC CHO CHỨC NĂNG PHÂN TAB MEMBER VIEW MANAGEMENT
-    // ==========================================
 
     @Override
     @Transactional(readOnly = true)
     public List<MemberBorrowDTO> getMemberCurrentBorrows(String username) {
         Integer memberId = getMemberIdByUsername(username);
         if (memberId == null) return new ArrayList<>();
-
-        List<BorrowDetail> details = borrowDetailRepository.findCurrentBorrowsByMemberId(memberId);
-        List<MemberBorrowDTO> dtoList = new ArrayList<>();
-
-        for (BorrowDetail detail : details) {
-            MemberBorrowDTO dto = new MemberBorrowDTO();
-            dto.setId(detail.getBorrowDetailId());
-            dto.setBookTitle(detail.getBook().getTitle());
-
-            if (detail.getBook().getAuthors() != null && !detail.getBook().getAuthors().isEmpty()) {
-                String authorsStr = detail.getBook().getAuthors().stream()
-                        .map(Author::getAuthorName)
-                        .collect(Collectors.joining(", "));
-                dto.setAuthorName(authorsStr);
-            } else {
-                dto.setAuthorName("Chưa rõ tác giả");
-            }
-
-            dto.setBookIdStr(detail.getBookItem() != null ? detail.getBookItem().getBarcode() : "BK-" + detail.getBook().getBookId());
-            dto.setActionDate(detail.getBorrow().getBorrowDate());
-            dto.setDueDate(detail.getDueDate());
-            dto.setStatus(detail.getStatus());
-
-            if (detail.getBorrow().getBorrowDate() != null && detail.getDueDate() != null) {
-                long totalDays = ChronoUnit.DAYS.between(detail.getBorrow().getBorrowDate(), detail.getDueDate());
-                long elapsedDays = ChronoUnit.DAYS.between(detail.getBorrow().getBorrowDate(), LocalDateTime.now());
-                long daysLeft = ChronoUnit.DAYS.between(LocalDateTime.now(), detail.getDueDate());
-
-                dto.setDaysLeft(Math.max(0, daysLeft));
-                int progress = totalDays > 0 ? (int) ((elapsedDays * 100) / totalDays) : 0;
-                dto.setProgressPercentage(Math.min(100, Math.max(0, progress)));
-            }
-            dtoList.add(dto);
-        }
-        return dtoList;
+        return borrowDetailRepository.findCurrentBorrowsByMemberId(memberId).stream()
+                .filter(d -> "Pending".equalsIgnoreCase(d.getStatus())
+                        || "Borrowed".equalsIgnoreCase(d.getStatus())
+                        || "Overdue".equalsIgnoreCase(d.getStatus())
+                        || "Return_Pending".equalsIgnoreCase(d.getStatus())
+                        || "Renew_Pending".equalsIgnoreCase(d.getStatus()))
+                .map(this::toMemberBorrowDTO)
+                .toList();
     }
 
     @Override
@@ -338,26 +468,20 @@ public class BorrowServiceImpl implements BorrowService {
         Integer memberId = getMemberIdByUsername(username);
         if (memberId == null) return new ArrayList<>();
 
-        List<Reservation> reservations = reservationRepository.findByMember_MemberIdOrderByReservationDateDesc(memberId);
         List<MemberBorrowDTO> dtoList = new ArrayList<>();
-
-        for (Reservation res : reservations) {
+        for (Reservation res : reservationRepository.findByMember_MemberIdOrderByReservationDateDesc(memberId)) {
+            if (!"Pending".equalsIgnoreCase(res.getStatus()) && !"Active".equalsIgnoreCase(res.getStatus())) {
+                continue;
+            }
             MemberBorrowDTO dto = new MemberBorrowDTO();
             dto.setId(res.getReservationId());
             dto.setBookTitle(res.getBook().getTitle());
-
-            if (res.getBook().getAuthors() != null && !res.getBook().getAuthors().isEmpty()) {
-                String authorsStr = res.getBook().getAuthors().stream()
-                        .map(Author::getAuthorName)
-                        .collect(Collectors.joining(", "));
-                dto.setAuthorName(authorsStr);
-            } else {
-                dto.setAuthorName("Chưa rõ tác giả");
-            }
-
+            dto.setAuthorName(getAuthorNames(res.getBook()));
             dto.setBookIdStr("RES-" + res.getBook().getBookId());
             dto.setActionDate(res.getReservationDate());
-            dto.setDueDate(res.getReservationDate().plusDays(3));
+            if (res.getReservationDate() != null) {
+                dto.setDueDate(res.getReservationDate().plusDays(3));
+            }
             dto.setStatus(res.getStatus());
             dtoList.add(dto);
         }
@@ -369,42 +493,95 @@ public class BorrowServiceImpl implements BorrowService {
     public List<MemberBorrowDTO> getMemberOneMonthHistory(String username) {
         Integer memberId = getMemberIdByUsername(username);
         if (memberId == null) return new ArrayList<>();
-
         LocalDateTime oneMonthAgo = LocalDateTime.now().minusMonths(1);
-        List<BorrowDetail> details = borrowDetailRepository.findBorrowHistoryInOneMonth(memberId, oneMonthAgo);
-        List<MemberBorrowDTO> dtoList = new ArrayList<>();
-
-        for (BorrowDetail detail : details) {
-            MemberBorrowDTO dto = new MemberBorrowDTO();
-            dto.setId(detail.getBorrowDetailId());
-            dto.setBookTitle(detail.getBook().getTitle());
-
-            if (detail.getBook().getAuthors() != null && !detail.getBook().getAuthors().isEmpty()) {
-                String authorsStr = detail.getBook().getAuthors().stream()
-                        .map(Author::getAuthorName)
-                        .collect(Collectors.joining(", "));
-                dto.setAuthorName(authorsStr);
-            } else {
-                dto.setAuthorName("Chưa rõ tác giả");
-            }
-
-            dto.setBookIdStr(detail.getBookItem() != null ? detail.getBookItem().getBarcode() : "BK-" + detail.getBook().getBookId());
-            dto.setActionDate(detail.getBorrow().getBorrowDate());
-            dto.setReturnDate(detail.getReturnDate());
-            dto.setStatus(detail.getStatus());
-            dtoList.add(dto);
-        }
-        return dtoList;
+        return borrowDetailRepository.findBorrowHistoryInOneMonth(memberId, oneMonthAgo).stream()
+                .filter(d -> "Returned".equalsIgnoreCase(d.getStatus()))
+                .map(this::toMemberBorrowDTO)
+                .toList();
     }
 
-    // ==========================================
-    // PHƯƠNG THỨC HELPER ĐÃ ĐƯỢC BỔ SUNG ĐỂ SỬA LỖI CANNOT FIND SYMBOL
-    // ==========================================
+    private MemberBorrowDTO toMemberBorrowDTO(BorrowDetail detail) {
+        MemberBorrowDTO dto = new MemberBorrowDTO();
+        dto.setId(detail.getBorrowDetailId());
+        dto.setBookTitle(detail.getBook().getTitle());
+        dto.setAuthorName(getAuthorNames(detail.getBook()));
+        dto.setBookIdStr(detail.getBookItem() != null ? detail.getBookItem().getBarcode() : "BK-" + detail.getBook().getBookId());
+        dto.setActionDate(detail.getBorrow().getBorrowDate());
+        dto.setDueDate(detail.getDueDate());
+        dto.setReturnDate(detail.getReturnDate());
+        dto.setStatus(detail.getStatus());
+        if (detail.getBorrow().getBorrowDate() != null && detail.getDueDate() != null) {
+            long totalDays = ChronoUnit.DAYS.between(detail.getBorrow().getBorrowDate(), detail.getDueDate());
+            long elapsedDays = ChronoUnit.DAYS.between(detail.getBorrow().getBorrowDate(), LocalDateTime.now());
+            long daysLeft = ChronoUnit.DAYS.between(LocalDateTime.now(), detail.getDueDate());
+            dto.setDaysLeft(Math.max(0, daysLeft));
+            int progress = totalDays > 0 ? (int) ((elapsedDays * 100) / totalDays) : 0;
+            dto.setProgressPercentage(Math.min(100, Math.max(0, progress)));
+        }
+        dto.setRenewCount(detail.getRenewCount() != null ? detail.getRenewCount() : 0);
+        return dto;
+    }
+
     private Integer getMemberIdByUsername(String username) {
-        // 🛠️ FIX: Map chuẩn qua getMember().getMemberId() theo đúng cấu trúc Entity mới cung cấp
         return memberAccountRepository.findByUsername(username)
                 .map(MemberAccount::getMember)
                 .map(Member::getMemberId)
                 .orElse(null);
+    }
+
+    private void sendInternalNotification(Member member, String title, String content) {
+        if (member == null || member.getMemberId() == null) {
+            return;
+        }
+        Notification notif = new Notification();
+        notif.setTitle(title);
+        notif.setContent(content);
+        notif.setCreatedDate(LocalDateTime.now());
+        notif.setStatus("Active");
+        Notification saved = notificationRepository.save(notif);
+
+        MemberNotification mn = new MemberNotification();
+        mn.setId(new MemberNotificationId(member.getMemberId(), saved.getNotificationId()));
+        mn.setMember(member);
+        mn.setNotification(saved);
+        mn.setIsRead(false);
+        memberNotificationRepository.save(mn);
+    }
+
+    private String getAuthorNames(Book book) {
+        if (book.getAuthors() == null || book.getAuthors().isEmpty()) {
+            return "Chua ro tac gia";
+        }
+        return book.getAuthors().stream()
+                .map(Author::getAuthorName)
+                .collect(Collectors.joining(", "));
+    }
+
+    private int getEffectiveBorrowLimit(Member member) {
+        int configuredLimit = getPositiveIntSetting("MAX_BOOKS_PER_MEMBER", 10);
+        int tierLimit = member != null && member.getTier() != null && member.getTier().getBorrowLimit() != null
+                ? member.getTier().getBorrowLimit()
+                : configuredLimit;
+        return Math.max(1, Math.min(configuredLimit, tierLimit));
+    }
+
+    private int normalizeBorrowDays(Integer requestedDays) {
+        int maxBorrowDays = getPositiveIntSetting("MAX_BORROW_DAYS", 14);
+        int safeRequestedDays = requestedDays == null || requestedDays <= 0 ? maxBorrowDays : requestedDays;
+        return Math.min(safeRequestedDays, maxBorrowDays);
+    }
+
+    private int getPositiveIntSetting(String key, int defaultValue) {
+        try {
+            return systemSettingRepository.findBySettingKeyIgnoreCase(key)
+                    .map(SystemSetting::getSettingValue)
+                    .filter(value -> value != null && !value.isBlank())
+                    .map(String::trim)
+                    .map(Integer::parseInt)
+                    .filter(value -> value > 0)
+                    .orElse(defaultValue);
+        } catch (Exception ignored) {
+            return defaultValue;
+        }
     }
 }
